--- a/docker/todo-app/front-end/Dockerfile
+++ b/docker/todo-app/front-end/Dockerfile
@@ -1,1 +1,6 @@
-
+FROM node:14-alpine AS todofrontend
+WORKDIR /todo-app/front-end
+COPY * ./
+ADD node_modules.tar.gz ./
+EXPOSE 3001
+ENTRYPOINT [ "npm", "start" ]
