--- a/docker/todo-app/tests/Dockerfile
+++ b/docker/todo-app/tests/Dockerfile
@@ -1,1 +1,5 @@
-
+FROM mjgargani/puppeteer:trybe1.0 AS todotests
+WORKDIR /todo-app/tests
+COPY * ./
+ADD node_modules.tar.gz ./
+ENTRYPOINT [ "npm", "test" ]
